--- a/app/faqs.css
+++ b/app/faqs.css
@@ -7,6 +7,7 @@
   position: relative;
   display: flex;
   align-items: flex-end;
+  justify-content: flex-start;
   overflow: hidden;
 }
 .faqs-hero__bg {
@@ -36,8 +37,7 @@
   z-index: 2;
   padding-top: 15rem;
   padding-bottom: 3rem;
-  max-width: 52rem;
-  text-align: left;
+  width: 100%;
 }
 .faqs-hero__eyebrow {
   display: inline-block;
